--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <body>
         
+        <ion-icon name="alarm-outline"></ion-icon>
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -32,7 +33,8 @@
             crossorigin="anonymous"
         ></script>
 
-
+        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
