all the images inserted, and header is completed

--- a/index.html
+++ b/index.html
@@ -19,8 +19,52 @@
     </head>
 
     <body>
+        <!-- creating the nav bar starts -->
+        <div class="home-header container">
+           <div class="row">
+            <h3 class="col-4">Ecommerce</h3>
+            <div class="col-4">
+                <ul class="nav justify-content-center">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="product.html">Product</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="adout.html">About</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
+                      </li>
+                </ul>    
+            </div>
+            <div class="col-4">
+                <button type="button" class="btn btn-outline-dark"><a class="nav-link active" aria-current="page" href="login.html">Login</a></button>
+                <button type="button" class="btn btn-outline-dark"><a class="nav-link active" aria-current="page" href="register.html">Register</a></button>
+                <button type="button" class="btn btn-outline-dark"><a class="nav-link active" aria-current="page" href="">Cart(0)</a></button>
+            </div>
+           </div>
+        </div>
+        <!-- creating the nav bar ends -->
+        <!-- the banner is starts -->
+        <div class="card text-bg-dark">
+                <img src="./main.png.jpg" class="card-img" alt="...">
+            <div class="card-img-overlay">
+                <h5 class="card-title display-4">New Season Arrivals</h5>
+                <h5 class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a litter bit longer.</h5>
+            </div>
+            
+         </div>
+
+         <br> <br>
+            <div class="middel">
+                <h2 class="display-4">Latest Products</h2>
+            <p>_________________________________________________________________________________________________________________________________________________________</p>
+            </div>
+
+         <!-- the banner is ends -->
         
-        <ion-icon name="alarm-outline"></ion-icon>
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
