the adout is completed

--- a/adout.html
+++ b/adout.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Title</title>
+        <title>About</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
@@ -18,7 +18,55 @@
         />
     </head>
 
-    <body>
+    <body style="text-align: center;">
+        <div class="part-1 ">
+            <br><br>
+            <h2>About Us</h2>
+            <p>_________________________________________________________________________________________________________________________________________________________</p>
+            <p class="text-secondary">Lorem ipsum dolor sit arrent consectetur adipisicing elit. Nostrum facere doloemqe versitatis odit similque sequi. Ordit amet fuga nam qunam quasi facilis sed deloremque saepe sint perspiciatis explicado totam vero ques provident ipsam, veritatis nostrum velit quos resusandae est molitia esse fugit dolore laudantium. Ex vel explicabo earum unde eligendi autem praesentium, doloermque distintio nesciunt porro tempore quis eaque labore vel tenetur soluta dolore sunt maxine aliquam cromolestias . Ad consequutur ventam sequi ullam tempore vel tenetur soluta dolore sunt maxime aliquma cropris est, quo saepe dolorm optio minus sint nemo totam dolorum! Reperhenederit delectus expedita a alias name resusandae illo debitis repellat ilbreo, quasi explicabo molestiae saepe, dolorem tempore itaque eveniet quma dignissimos blanditiis exceptrui harum numquma vel nihil? ipsum</p>
+            <h2>Our Products</h2>
+            <br><br>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="card h-100">
+                      <img src="./pexels-photo-298863.jpeg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Men's Clothing</h5>
+                      </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                      <img src="./pexels-photo-7679720.jpeg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Women's Clothing</h5>
+                        
+                      </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                      <img src="./pexels-photo-1927259.webp" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Jewelery</h5>
+                      </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                      <img src="./pexels-photo-356056.jpeg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Electronics</h5>
+                      </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br><br>
+        <p class="text-secondary">Made with <ion-icon name="heart-outline" class="heart" ></ion-icon>by <u>PRANEETH KUMAR SM</u> </p>
+
         
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
