--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!-- the banner is starts -->
         <div class="card text-bg-dark">
                 <img src="./main.png.jpg" class="card-img" alt="...">
-            <div class="card-img-overlay">
+            <div class="card-img-overlay banner">
                 <h5 class="card-title display-4">New Season Arrivals</h5>
                 <h5 class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a litter bit longer.</h5>
             </div>
