the conact page is completed

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Title</title>
+        <title>contact us page</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
@@ -16,9 +16,32 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     </head>
 
     <body>
+        <div style="text-align: center;" >
+            <h2 style="text-align: center;">Contact Us</h2>
+            <p style="text-align: center;">_________________________________________________________________________________________________________________________________________________________</p>
+            <form action="" class="center" style="padding-left: 600px;">
+                <div class="col-md-4" >
+                    <label for="inputEmail4" class="form-label">Name</label>
+                    <input type="name" class="form-control" id="inputEmail4" placeholder="Enter your name">
+                  </div>
+                  <div class="col-md-4">
+                    <label for="inputEmail4" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="inputEmail4" placeholder="name@example.com">
+                  </div>
+                  <div class=" col-md-4">
+                    <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Enter your message"></textarea>
+                  </div>
+            </form>
+              <br><br>
+              <button type="button" class="btn btn-secondary" style="text-align: center;">Send</button>
+              <br><br>
+              <p class="text-secondary">Made with <i class="fa-solid fa-heart heart" ></i> by <u>PRANEETH KUMAR SM</u> </p>
+        </div>
         
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
