--- a/index.html
+++ b/index.html
@@ -40,13 +40,15 @@
                 </ul>    
             </div>
             <div class="col-4">
-                <button type="button" class="btn btn-outline-dark"><a class="nav-link active" aria-current="page" href="login.html">Login</a></button>
+                <button type="button" class="btn btn-outline-dark"><a class="nav-link active" aria-current="page" href="login.html"> Login</a></button>
                 <button type="button" class="btn btn-outline-dark"><a class="nav-link active" aria-current="page" href="register.html">Register</a></button>
                 <button type="button" class="btn btn-outline-dark"><a class="nav-link active" aria-current="page" href="">Cart(0)</a></button>
             </div>
            </div>
         </div>
-        <!-- creating the nav bar ends -->
+        <!-- creating the nav bar ends --><ion-icon name="log-in-outline"></ion-icon>
+                                            <ion-icon name="person-add-outline"></ion-icon>
+                                            <ion-icon name="cart-outline"></ion-icon>  
         <!-- the banner is starts -->
         <div class="card text-bg-dark">
                 <img src="./main.png.jpg" class="card-img" alt="...">
