--- a/adout.html
+++ b/adout.html
@@ -16,6 +16,7 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     </head>
 
     <body style="text-align: center;">
@@ -65,8 +66,8 @@
             </div>
         </div>
         <br><br>
-        <p class="text-secondary">Made with <ion-icon name="heart-outline" class="heart" ></ion-icon>by <u>PRANEETH KUMAR SM</u> </p>
-
+        <p class="text-secondary">Made with <i class="fa-solid fa-heart heart"></i> by <u>PRANEETH KUMAR SM</u> </p>
+        
         
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
