the register is completed

--- a/register.html
+++ b/register.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Title</title>
+        <title>Register page</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
@@ -19,6 +19,28 @@
     </head>
 
     <body>
+         <!-- the register from is starts -->
+         <div  style="padding-left: 600px;">
+            <form action="" class="center" >
+                  <div class="col-md-4">
+                    <label for="inputEmail4" class="form-label">Full Name</label>
+                    <input type="text" class="form-control" id="inputEmail4" placeholder="Enter Your Name">
+                  </div>
+                  <div class="col-md-4">
+                    <label for="inputEmail4" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="inputEmail4" placeholder="name@example.com">
+                  </div>
+                  <div class="col-md-4">
+                    <label for="inputEmail4" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="inputEmail4" placeholder="Password">
+                  </div>
+                    </form><br>
+                    <p style="display: flex;">Alredy has an account?  <a class="nav-link active" aria-current="page" href="login.html"><u style="color: rgb(67, 161, 208);">Login</u></a></p>
+                    <br>
+            </div>      
+              <button type="button" class="btn btn-secondary" style=" margin-left: 730px;">Login</button>
+        <!-- the register from is ends -->
+
         
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
