we got product images

--- a/product.html
+++ b/product.html
@@ -20,6 +20,10 @@
 
     <body>
 
+        <div class="ProdDetails">
+
+        </div>
+
          <!-- the index all images starts -->
          
          <div class="container">
