--- a/about.html
+++ b/about.html
@@ -19,7 +19,35 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     </head>
 
-    <body style="text-align: center;">
+    <body style="text-align: center;" class="n">
+      <!-- creating the nav bar starts -->
+      <div class=" container home-header">
+        <div class="  rowf" style="display: flex ;">
+         <h3 class="col-4">Ecommerce</h3>
+         <div class="col-4">
+             <ul class="nav">
+                 <li class="nav-item">
+                   <a class="nav-link active " aria-current="page" href="index.html">Home</a>
+                 </li>
+                 <li class="nav-item ">
+                     <a  data-id="details" id="productpage" class="nav-link active" aria-current="page" href="product.html">Product</a>
+                   </li>
+                   <li class="nav-item">
+                     <a class="nav-link active" aria-current="page" href="about.html">About</a>
+                   </li>
+                   <li class="nav-item">
+                     <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
+                   </li>
+             </ul>    
+         </div>  
+         <div class="col-4">
+             <button type="button" class="btn btn-outline-dark"><a class="nav-link active" aria-current="page" href="login.html"><ion-icon name="log-in-outline"></ion-icon> Login</a></button>
+             <button type="button" class="btn btn-outline-dark"><a class="nav-link active" aria-current="page" href="register.html"> <ion-icon name="person-add-outline"></ion-icon>Register</a></button>
+             <button type="button" class="btn btn-outline-dark"><a class="nav-link active" aria-current="page" href="add-to-cart.html"> <ion-icon name="cart-outline"></ion-icon> Cart(0)</a></button>
+         </div>
+        </div>
+     </div>
+     <!-- creating the nav bar ends -->
         <div class="part-1 ">   
             <br><br>
             <h2>About Us</h2>
