--- a/add-to-cart.html
+++ b/add-to-cart.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!-- <!doctype html>
 <html lang="en">
     <head>
         <title>Title</title>
@@ -56,7 +56,7 @@
      <!-- this div for items ends -->
    
 
-        <script src="./cart.js"></script>
+        <!-- <script src="./cart.js"></script> -->
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -69,4 +69,4 @@
             crossorigin="anonymous"
         ></script>
     </body>
-</html>
+</html> -->
