--- a/cart.html
+++ b/cart.html
@@ -36,7 +36,7 @@
                  <div class="col-4">
                      <button type="button" class="btn btn-outline-dark"><a class="nav-link active" aria-current="page" href="login.html"><ion-icon name="log-in-outline"></ion-icon> Login</a></button>
                      <button type="button" class="btn btn-outline-dark"><a class="nav-link active" aria-current="page" href="register.html"> <ion-icon name="person-add-outline"></ion-icon>Register</a></button>
-                     <button type="button" class="btn btn-outline-dark"><a class="nav-link active" aria-current="page" href="cart.html"> <ion-icon name="cart-outline"></ion-icon> Cart(<span id="addProduct"></span>)</a></button>
+                     <button type="button" class="btn btn-outline-dark"><a class="nav-link active" aria-current="page" href="./cart.html"> <ion-icon name="cart-outline"></ion-icon> Cart(<span id="addProduct"></span>)</a></button>
                  </div>
                 </div>
              </div>
