--- a/product.html
+++ b/product.html
@@ -42,7 +42,7 @@
              <div class="col-4">
                  <button type="button" class="btn btn-outline-dark"><a class="nav-link active" aria-current="page" href="login.html"><ion-icon name="log-in-outline"></ion-icon> Login</a></button>
                  <button type="button" class="btn btn-outline-dark"><a class="nav-link active" aria-current="page" href="register.html"> <ion-icon name="person-add-outline"></ion-icon>Register</a></button>
-                 <button type="button" class="btn btn-outline-dark"><a class="nav-link active" aria-current="page" href="add-to-cart.html"> <ion-icon name="cart-outline"></ion-icon>Cart(<span></span>)</a></button>
+                 <button type="button" class="btn btn-outline-dark"><a class="nav-link active" aria-current="page" href="./cart.html"> <ion-icon name="cart-outline"></ion-icon>Cart(<span class="cartValue"></span>)</a></button>
              </div>
             </div>
          </div><br><br><br>
@@ -69,7 +69,7 @@
          <!-- the index all images starts -->
           <div class="container">
             <div class="PPdetails">
-                
+
             </div>
          <div class="onclickDetails">
 
